--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -29,12 +29,11 @@
                         </div>
                  
                     </div>
-                    
-                    <div class="view-button">
-                        <button class="view" type="submit"> View Post </button>
-                    </div>
                 </div>
             {% endfor %}
-          
+            
+        <div class="view-button">
+            <button class="view" type="submit"> New Post </button>
+        </div> 
     </div>
 {% endblock %}
